ingress-nginx/middleware/flink.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-dashboard.quixmart.com
  namespace: data-center
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cz-flink.deepblueai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: flink-jobmanager
              servicePort: 8081
