ingress-nginx/middleware/ingress-nginx-elasticjob.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-elaticjob
  namespace: elastic-job
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/secure-backends: "true"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: job.deepblueai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: elastic-job-lite-console
              servicePort: 8899
#  tls:
#    - hosts:
#        - job.deepblueai.com
#      secretName: deepblueai-certs
