ingress-nginx/middleware/ingress-nginx-nacos.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nacos
  namespace: nacos
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/secure-backends: "true"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: nacos.deepblueai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nacos-headless-prod
              servicePort: 8848
  tls:
    - hosts:
        - nacos.deepblueai.com
      secretName: deepblueai-certs
